--- a/Bwg/wwwroot/templates/home.html
+++ b/Bwg/wwwroot/templates/home.html
@@ -198,7 +198,7 @@
                             <ul>
                                 <li>
                                     <div class="icon_ser">
-                                        <a target="_blank" href="/files/OŚWIADCZENIE-2016.doc">
+                                        <a target="_blank" href="/files/OSWIADCZENIE-2016.doc">
                                             <i class="fa fa-file-word-o" />
                                         </a>
                                     </div>
