fixed the shit bugs

--- a/Bwg/wwwroot/templates/home.html
+++ b/Bwg/wwwroot/templates/home.html
@@ -313,8 +313,8 @@
                     <div class="col-xs-12 col-md-6 col-sm-12">
                         <ul>
                             <li style="text-align: center;">
-                                <p><b>BUSINESS WORK GROUP Sp. z o.o..</b></p>
-                                <p>ul. 29 Listopada 17B / 4 Skawina 32-050 </p>
+                                <p><b>BUSINESS WORK GROUP Sp. z o.o.</b></p>
+                                <p>ul. 29 Listopada 17B / 4 32-050 Skawina</p>
                                 <p>NIP: 9442254222, REGON: 366678359, KRS: 0000666400</p>
                                 <p>Nr. bankowy: </p>
                                 <p>Bank Zachodni WBK S.A. </p>
